# gsm

./: .gitignore  clean.sh  gsm.toml  pyproject.toml  setup_env.sh  update.sh  vars.sh
.devcontainer/: Dockerfile  build_build_image.sh  build_dev_image.sh  devcontainer.json
gsm/: __main__.py  fs_template.py  log.py  project_files.py  semver.py  version.py
gsm/project_files/: __init__.py  _config_file_impl.py  _files_impl_utils.py  _files_utils.py  _lock_file_impl.py  _mirrors_file_impl.py  config_file.py  files.py  hash.py  lock_file.py  mirrors_file.py  version.py
gsm/tests/: conftest.py  files_utils.py  fs_template.py  project_files.py  semver.py
gsm/tests/test_utils/: fs_template.py  project_template.py
