[tool.poetry]
name = "gsm"
version = "0.1.5"
description = ""
authors = ["gabrielcfvg <gabrielcfvg@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
msgspec = "^0.18.6"
gitpython = "^3.1.41"
colorama = "^0.4.6"
pytest = "^8.0.0"

[tool.pytest.ini_options]
python_files = "*.py"
testpaths = "gsm/tests"
addopts = "--import-mode=importlib" # recommended by pytest


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
